# FitPlan

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: labeler.yml
examples/: muscle_gain.fitplan  weight_loss.fitplan
fitplan/: ingredient_api.py  ingredient_db.py  main.py  nutrition_calc.py  plan_generator.py  validators.py  workout_calc.py
fitplan/generators/: html_generator.py  md_generator.py  nutrition_generator.py  progress_generator.py  shopping_generator.py
fitplan/grammars/: fitplan.tx
fitplan/templates/: fitplan.html
