[build-system]
requires = ["flit_core>=3.2.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fitplan"
version = "0.1.0"
description = "FitPlan DSL — language for nutrition and training planning"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Anja Maksimovic" },
    { name = "Marija Ilic" },
    { name = "Biljana Mijic" },
    { name = "Ivana Ilijin" }
]
dependencies = [
    "textX>=3.0.0",
    "Jinja2>=3.0.0",
    "click>=8.0.0",
    "requests>=2.20.0",
]

[project.optional-dependencies]
dev = ["flit", "pytest"]

[project.urls]
Homepage = "https://github.com/AnjaMaksimovic/FitPlan"

[project.entry-points."textx_languages"]
fitplan = "fitplan.main:fitplan_language"

[project.entry-points."textx_generators"]
fitplan_html = "fitplan.generators.html_generator:html_generator"
fitplan_md = "fitplan.generators.md_generator:md_generator"
fitplan_shopping = "fitplan.generators.shopping_generator:shopping_generator"
fitplan_progress = "fitplan.generators.progress_generator:progress_generator"
fitplan_nutrition = "fitplan.generators.nutrition_generator:nutrition_generator"